@startuml
'https://plantuml.com/class-diagram

left to right direction

class Org {
    id: ID
    name : str
    fullname : str
    vat : str
    kpp : str
    created : datetime
    updated : datetime
}

class Depart {
    id: ID
    name : str
}

class Person {
    id : ID
    phone : phone
    phones[] : phone
    lastname : str
    firstname : str
    midname : str
    state : bool
    type : EType
    email[] : email
    sex : bool null
    tz : str
    soc_vk[] : str
    soc_fb[] : str
    soc_ok : str
    soc_ig : str
    soc_tg : str
    soc_wa : str
    soc_vb : str
    created : datetime
    updated : datetime
    statemod : datetime
}

enum EType {
    Primary
    Secondary
    Ext
    Indirect
}

Org "1" *-- "*" Depart
Depart "1" *-- "*" Depart
Depart "*" <-- "*" Person

@enduml
